# 002AIC

./: .gitignore  AI_ML_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_STATUS.md  README.md  package-lock.json  test-jwt.js
apps/backend-services/python/agent-orchestration-service/: Dockerfile  README.md  pyproject.toml
apps/backend-services/python/agent-orchestration-service/.github/workflows/: ci-cd.yml
apps/backend-services/python/agent-orchestration-service/app/: main.py
apps/backend-services/python/agent-orchestration-service/app/adapters/: kafka_adapter.py  telemetry.py
apps/backend-services/python/agent-orchestration-service/app/api/: agents.py
apps/backend-services/python/agent-orchestration-service/app/models/: agent.py
apps/backend-services/python/agent-orchestration-service/app/orchestrator/: workflow.py
apps/backend-services/python/agent-orchestration-service/docs/: high-level-architecture.md  scaffold.md
apps/backend-services/python/agent-orchestration-service/tests/: test_api.py  test_workflow.py
apps/backend-services/python/analytics-service/: Dockerfile  README.md  arch.md  pyproject.toml
apps/backend-services/python/analytics-service/app/: main.py
apps/backend-services/python/analytics-service/app/adapters/: telemetry.py
apps/backend-services/python/analytics-service/app/analytics_engine/: processor.py
apps/backend-services/python/analytics-service/app/api/: analytics.py
apps/backend-services/python/analytics-service/app/models/: analytics.py
apps/backend-services/python/analytics-service/tests/: test_api.py  test_processor.py
(+31 files in other folders)
