[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = "Data-heavy analytics microservice with ML integration."
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.29"
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.13"
scikit-learn = "^1.4"
opentelemetry-api = "^1.25"
opentelemetry-sdk = "^1.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
